[package]
name = "wallrus"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
colored = "2.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"]}
scraper = "0.13.0"
tokio = { version = "1", features = ["full"] }

#[profile.release]
#lto = true
#opt-level = 1
#strip = true
